[package]
name = "refhelper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3.17"
clap = "2.33.3"
structopt = { version = "0.3", default-features = false }
comfy-table = "4.1.1"
rustyline = "9.0.0"
rustyline-derive = "0.5.0"
biblatex = "0.4.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"

# static compilation
openssl = {version = "0.10", features = ["vendored"]}
