[package]
name = "refhelper"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3"}
clap = "2.33.3"
structopt = { version = "0.3", default-features = false }
comfy-table = "4.1.1"
rustyline = { version = "9.0.0", default-features = false }
rustyline-derive = "0.5.0"
biblatex = "0.4.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
fuzzy-matcher = "0.3.7"
indicatif = "0.16.2"
scraper = "0.12.0"

#[target.'cfg(target_env = "musl")'.dependencies]
#openssl = {version = "0.10", features = ["vendored"]}

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
